improved dashbaord