@@ -6,6 +6,8 @@ import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.parser.OpenAPIV3Parser;
 import io.swagger.v3.parser.core.models.ParseOptions;
 import io.swagger.v3.parser.core.models.SwaggerParseResult;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -16,32 +18,39 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.List;
 
+/**
+ * Controller for handling file uploads and displaying validation results.
+ */
 @Controller
 public class OasUploadController {
+
+    private static final Logger log = LoggerFactory.getLogger(OasUploadController.class);
 
     @Autowired
     private OasValidationService oasValidationService;
 
     /**
-     * Handles GET requests to display the file upload form.
-     * @param model The Spring UI model to pass attributes to the view.
+     * Displays the main file upload page.
+     *
+     * @param model The Spring UI model.
      * @return The name of the Thymeleaf template for the upload page.
      */
     @GetMapping("/")
     public String showUploadForm(Model model) {
-        // Add an empty list for results initially, so the table doesn't break on first load
-        model.addAttribute("results", List.of());
+        model.addAttribute("results", Collections.emptyList());
         return "upload";
     }
 
     /**
-     * Handles POST requests for file uploads and regex validation.
+     * Handles the POST request for file upload and triggers the validation process.
+     *
      * @param file The uploaded OpenAPI Specification file.
-     * @param validateJava Boolean indicating if Java regex validation should be performed.
-     * @param validateJs Boolean indicating if JavaScript regex validation should be performed.
-     * @param validateGoRe2j Boolean indicating if Go (RE2J) regex validation should be performed.
+     * @param validateJava Boolean flag to enable Java regex validation.
+     * @param validateJs Boolean flag to enable JavaScript regex validation.
+     * @param validateGoRe2j Boolean flag to enable Go (RE2J) regex validation.
      * @param model The Spring UI model to pass results to the view.
      * @return The name of the Thymeleaf template to display the results.
      */
@@ -52,43 +61,53 @@ public class OasUploadController {
                                    @RequestParam(value = "validateGoRe2j", defaultValue = "false") boolean validateGoRe2j,
                                    Model model) {
         if (file.isEmpty()) {
-            model.addAttribute("message", "Please select an OAS file to upload.");
-            model.addAttribute("results", List.of()); // Ensure results list is empty
+            model.addAttribute("message", "Error: Please select an OpenAPI file to upload.");
+            model.addAttribute("results", Collections.emptyList());
             return "upload";
         }
 
+        log.info("Received file: {}. Size: {} bytes.", file.getOriginalFilename(), file.getSize());
+        log.info("Validation engines selected - Java: {}, JavaScript: {}, Go (RE2J): {}", validateJava, validateJs, validateGoRe2j);
+
         try {
-            // Read file content
             String oasContent = new String(file.getBytes(), StandardCharsets.UTF_8);
 
-            // Parse the OpenAPI content
+            // Set up parser options
             ParseOptions options = new ParseOptions();
-            options.setResolve(true); // Resolve external references
+            options.setResolve(true); // Resolve external references like $ref
+
+            // Parse the OpenAPI content using swagger-parser
             SwaggerParseResult parseResult = new OpenAPIV3Parser().readContents(oasContent, null, options);
 
-            if (parseResult.getOpenAPI() == null) {
-                model.addAttribute("message", "Failed to parse OpenAPI file. Errors: " + parseResult.getMessages());
-                model.addAttribute("results", List.of());
+            OpenAPI openAPI = parseResult.getOpenAPI();
+            if (openAPI == null) {
+                String errorMessage = "Failed to parse OpenAPI file. Errors: " + String.join(", ", parseResult.getMessages());
+                log.error(errorMessage);
+                model.addAttribute("message", "Error: " + errorMessage);
+                model.addAttribute("results", Collections.emptyList());
                 return "upload";
             }
 
-            OpenAPI openAPI = parseResult.getOpenAPI();
-
-            // Perform validation based on selected engines
+            // Perform validation
             List<ValidationResult> results = oasValidationService.validateOasRegex(
                     openAPI, validateJava, validateJs, validateGoRe2j);
 
-            model.addAttribute("message", "OAS file processed successfully!");
+            model.addAttribute("message", "Analysis complete for " + file.getOriginalFilename());
             model.addAttribute("results", results);
+            log.info("Validation complete. Found {} results.", results.size());
 
         } catch (IOException e) {
-            model.addAttribute("message", "Error reading file: " + e.getMessage());
-            model.addAttribute("results", List.of());
+            log.error("Error reading file.", e);
+            model.addAttribute("message", "Error: Could not read the uploaded file. " + e.getMessage());
+            model.addAttribute("results", Collections.emptyList());
         } catch (Exception e) {
+            log.error("An unexpected error occurred during processing.", e);
             model.addAttribute("message", "An unexpected error occurred: " + e.getMessage());
-            model.addAttribute("results", List.of());
-            e.printStackTrace(); // Log the full stack trace for debugging
+            model.addAttribute("results", Collections.emptyList());
         }
+
+        // Return the same 'upload' template, which will be re-rendered with the results.
+        // If using AJAX, the client will intelligently replace sections of the DOM.
         return "upload";
     }
 }
